Update challenge code to work with Flutter in 2024.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: dash_run
 description: Game based on centipede for the Flutter Create competition.
 
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
